2003-09-06  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-dtd.c

	Added some attribute support to DTD->RELAX NG importer

	* cong-dtd.c, cong-dtd.h

	Added easy traversal routine for DTD attributes

	* plugin-dtd.c

	Preliminary work on DTD->RELAX NG importer

	* cong-dtd.c, cong-dtd.h

	Added easy traversal routine for DTD elements
	
	* cong-file-import.c

	Fix for bux #118769 - a new dialog to select importers if more than one is applicable

2003-09-05  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-app.h, main.c

	My attempt at fix for bug #119755

2003-09-04  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-docbook.c

	Added custom property dialog for the orderedlist tag
	
	* cong-attribute-editor.c, cong-attribute-editor.h

	Added ability to bind GtkWidgets to XML attributes

	* cong-attribute-wrapper-check-button.c, cong-attribute-wrapper-check-button.h, cong-attribute-wrapper-radio-button.c, cong-attribute-wrapper-radio-button.h, cong-attribute-wrapper.c, cong-attribute-wrapper.h, Makefile.am

	New files

2003-09-03  David Malcolm <david@davemalcolm.demon.co.uk>
	
	* plugin-doc-from-xds.c

	Now sets the xmlDocPtr on the tree clone
	
	* cong-attribute-editor.c

	Should now clean up properly

	* cong-attribute-editor-cdata.c, cong-attribute-editor-enumeration.c, cong-attribute-editor.c, cong-attribute-editor.h

	Moved all document notifications and filtering to base class

	* cong-attribute-editor-enumeration.c, cong-attribute-editor-enumeration.h, Makefile.am, cong-attribute-editor.c, cong-attribute-editor.h

	Added new file for editing ENUMERATION attributes; moved code into it and reworked as a cong_attribute_editor subclass

2003-09-02  Jeff Martin <jeff@custommonkey.org>

	* plugin-doc-from-xds.c, cong-dispspec.c, cong-dispspec.h, cong-fake-plugin-hooks.h, main.c, Makefile.am

	New plugin to read contents of document-template from a dispspec and use this in the new document wizard as a template document.
	